# Basic-File-Information-Gathering-Script

./: .abuse_ch_key.example  .gitignore  Basic_inf_gathering.py  CITATION.cff  MEDIUM_ARTICLE.md  README.md  download_malware_sample.py  fileinfo.py  pyproject.toml  requirements.txt  static_analysis.py
.github/workflows/: ci.yml  publish.yml
yara_rules/: malware_9fdea40a.yar
